<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item
        android:id="@+id/hl_navigation_bar_settings"
        android:enabled="true"
        android:title="@string/menu_settings"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_settings_black_36dp" />

    <item
        android:id="@+id/hl_navigation_bar_home"
        android:enabled="true"
        android:title="@string/menu_home"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_home_black_36dp" />


    <item
        android:id="@+id/hl_navigation_bar_show_class"
        android:enabled="true"
        android:title="@string/menu_classes"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_class_black_36dp" />
</menu>